--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,16 @@
 
 
 #String de conexion a la base de datos
-spring.datasource.url=jdbc:postgresql://localhost:5433/SonielDB
+spring.datasource.url=jdbc:postgresql://localhost:5432/pWeb
 spring.datasource.username=postgres
-spring.datasource.password=9876
+spring.datasource.password=midori
 spring.jpa.show-sql=true
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
 
 server.servlet.context-path=/API/Sonweb/V1
-
+server.port=8081
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto= update
 spring.mvc.hiddenmethod.filter.enabled=true
